<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_fingerprint.FingerPrintActivity"
        android:background="@color/white"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/view"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/fingerprint_authentication"/>

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/let_s_start"
                android:layout_marginTop="30dp"
                />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="@string/put_your_finger_on_sensor"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                />

            <ImageView

                android:id="@+id/imageScanner"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintVertical_bias=".1"
                android:src="@drawable/ic_fingerprint"
                android:tint="@color/gray6"

                />

            <TextView
                android:id="@+id/tvNoFingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageScanner"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/your_device_not_support_fingerprint"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:visibility="gone"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>
