<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="model"
            type="com.task.app.taskapp.models.LoginModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:text="@string/login"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="80dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias=".4"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:orientation="horizontal"
                        android:background="@drawable/small_rounded"
                        >
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_email"
                            android:tint="@color/black"
                            android:padding="8dp"
                            />
                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:hint="@string/email"
                            android:background="@color/transparent"
                            android:textColorHint="@color/gray4"
                            android:singleLine="true"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:text="@={model.email}"
                            error="@{model.error_email}"
                            />
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/small_rounded"
                        android:layout_marginTop="20dp"
                        app:hintEnabled="false"
                        app:errorEnabled="false"
                        app:counterEnabled="false"
                        app:startIconTint="@color/black"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black"
                        app:startIconDrawable="@drawable/ic_lock"
                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:hint="@string/password"
                            android:background="@color/transparent"
                            android:textColorHint="@color/gray6"
                            android:singleLine="true"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:text="@={model.password}"
                            error="@{model.error_password}"

                            />


                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/rounded_corner"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/log_in"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="@string/or"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        />

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_corner"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/signup"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

