<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.task.app.taskapp.models.SignUpModel" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"


                >

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:text="@string/signup"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:orientation="horizontal"
                    android:background="@drawable/small_rounded"
                    android:layout_marginTop="20dp"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_user"
                        android:tint="@color/black"
                        android:padding="8dp"
                        />
                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/user_name"
                        android:background="@color/transparent"
                        android:textColorHint="@color/gray6"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@={model.name}"
                        error="@{model.error_name}"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:background="@drawable/small_rounded"
                    android:layout_marginTop="10dp"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_email"
                        android:tint="@color/black"
                        android:padding="8dp"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/email"
                        android:background="@color/transparent"
                        android:textColorHint="@color/gray6"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:text="@={model.email}"
                        error="@{model.error_email}"
                        />
                </LinearLayout>







                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_rounded"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:errorEnabled="false"
                    app:counterEnabled="false"
                    app:startIconTint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_lock"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/password"
                        android:background="@color/transparent"
                        android:textColorHint="@color/gray6"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@={model.password}"
                        error="@{model.error_password}"

                        />



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_rounded"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:errorEnabled="false"
                    app:counterEnabled="false"
                    app:startIconTint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:startIconDrawable="@drawable/ic_lock"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:hint="@string/re_password"
                        android:background="@color/transparent"
                        android:textColorHint="@color/gray6"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        android:text="@={model.re_password}"
                        error="@{model.error_re_password}"

                        />



                </com.google.android.material.textfield.TextInputLayout>


                <CheckBox
                    android:id="@+id/checkboxFingerprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/rb_bg"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/use_fingerprint"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="15dp"
                    />


                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_corner"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/signup"
                    />


                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@color/transparent"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@string/you_already_have_an_account_log_in"
                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

