<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="userModel"
            type="com.task.app.taskapp.models.UserModel" />


    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_main.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/black"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_gravity="center"
                    android:textColor="@color/white"                        android:textSize="30sp"
                    />
            </FrameLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:fillViewport="true"
                android:scrollbars="none"
                android:background="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="100dp"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:text="@string/hi"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:text="@{userModel.name}"

                        />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardLogout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="3dp"
                        app:cardBackgroundColor="@color/white"
                        app:contentPadding="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:text="@string/logout"
                            android:clickable="false"
                            android:longClickable="false"
                            />


                    </androidx.cardview.widget.CardView>


                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
